@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5268 2004/03/16 16:05:40 minskim Exp $
+$NetBSD: CHANGES,v 1.5269 2004/03/16 23:56:15 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1477,3 +1477,5 @@ Changes to the packages collection and infrastructure in 2004:
 	Removed mew-xemacs [uebayasi 2004-03-16]
 	Updated tk-Tix-8.2.0b1nb1 [minskim 2004-03-16]
 	Updated ruby-tcltklib to 1.6.8nb3 [minskim 2004-03-16]
+	Updated cpuflags to 0.63 [abs 2004-03-17]
+
